# sphinx-contributors

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  options.rst  requirements.txt
docs/source/: conf.py  contribute.rst  customization.rst  examples.rst  index.rst  installation.rst  reference.rst  usage.rst  who-is-using-it.rst
docs/source/_static/css/: custom.css
sphinxcontrib/: __init__.py  ghcontributors.py  models.py
src/sphinx_contributors/: __init__.py
src/sphinx_contributors/_static/: sphinx_contributors.css
tests/: __init__.py  test_contributors.py  test_directive.py  test_models.py
