[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sphinx_contributors"
author = "David Garcia"
author-email = "hi@davidgarcia.dev"
home-page = "https://github.com/dgarcia360/sphinx-contributors"
description-file = "README.rst"
requires-python = ">=3.10"
requires = [
  "sphinx >= 7",
  "requests",
]
classifiers=[
  "Framework :: Sphinx :: Extension",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.flit.metadata.requires-extra]
test = [
  "pre-commit",
  "pytest",
]
doc = ["furo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
